--- a/Finalversion/templates/index.html
+++ b/Finalversion/templates/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>    
     <meta charset="UTF-8">
-    <title style="color: #00b894;">🌳 Forest Fire Monitoring System 🔥</title>
+    <title>Forest Fire Monitoring System</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
     <script src="{{ url_for('static', filename='receiver.js') }}"></script>
 </head>
 <body onload="startFetching()">
-    <h1>🌳 Forest Fire Monitoring System 🔥:</h1>
+    <h1>🌳 Forest Fire Monitoring System 🔥</h1>
     <div id="messages" class="client-container"></div>
     <div id="decision-container"></div>
 </body>
