--- a/Finalversion/static/style.css
+++ b/Finalversion/static/style.css
@@ -7,10 +7,11 @@ body {
     padding: 20px;
 }
 
+
 h1 {
-    color: #00b894;;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  color: #b89c00; /* Green color for the tree leaves */
+  text-align: center;
+  text-shadow: 4px 4px 12px rgba(0, 0, 0, 1);
 }
 
 #messages {
