--- a/Scripts/templates/index.html
+++ b/Scripts/templates/index.html
@@ -11,5 +11,7 @@
     <h1>🌳 Forest Fire Monitoring System 🔥</h1>
     <div id="messages" class="client-container"></div>
     <div id="decision-container"></div>
+    <div id="danger-triangle"></div>
+    
 </body>
 </html>
